@@ -162,8 +162,7 @@ xbt_dict_t SD_workstation_get_properties(SD_workstation_t workstation)
   SD_CHECK_INIT_DONE();
   xbt_assert0((workstation != NULL), "Invalid parameters");
 
-  return (surf_workstation_model->get_properties
-          (workstation->surf_workstation));
+  return surf_resource_properties(workstation->surf_workstation);
 
 }
 
