@@ -233,7 +233,7 @@ xbt_dict_t SIMIX_host_get_properties(smx_host_t host)
 {
   xbt_assert0((host != NULL), "Invalid parameters");
 
-  return (surf_workstation_model->get_properties(host->simdata->host));
+  return surf_resource_properties(host->simdata->host);
 
 }
 
