@@ -216,12 +216,6 @@ static double get_available_speed(void *workstation)
                              workstation)->cpu);
 }
 
-static xbt_dict_t get_properties(void *workstation)
-{
-  return surf_cpu_model->get_properties(((workstation_CLM03_t) workstation)->
-                                        cpu);
-}
-
 static surf_action_t execute_parallel_task(int workstation_nb,
                                            void **workstation_list,
                                            double *computation_amount,
@@ -291,9 +285,6 @@ static void surf_workstation_model_init_internal(void)
   surf_workstation_model->extension.workstation.get_speed = get_speed;
   surf_workstation_model->extension.workstation.get_available_speed =
     get_available_speed;
-
-  /*manage the properties of the workstation */
-  surf_workstation_model->get_properties = get_properties;
 
   surf_workstation_model->extension.workstation.communicate = communicate;
   surf_workstation_model->extension.workstation.get_route = get_route;
